--- a/HTML/syntax.html
+++ b/HTML/syntax.html
@@ -5,6 +5,6 @@
         </head>
         <body>
                 <h3>basic syntax of html</h3>
-                <p>write a code here</p>
+                <p>write a text here</p>
         </body>
 </html>
